# supercollider

./: CMakeLists.txt  SConstruct
Headers/plugin_interface/: SC_InlineBinaryOp.h
HelpSource/Classes/: EnvGen.schelp
Plugins.xcodeproj/: project.pbxproj
SCClassLibrary/Common/Audio/: BasicOpsUGen.sc  Filter.sc  UGen.sc
SCClassLibrary/Common/Control/: Node.sc  RecurringNodes.sc  Server.sc  asTarget.sc
SCClassLibrary/Common/GUI/: ControlModel.sc  Grid.sc
SCClassLibrary/Common/Quarks/: LocalQuarks.sc  Quark.sc  QuarkSVNRepository.sc  Quarks.sc
SCClassLibrary/JITLib/ProxySpace/: NodeProxy.sc
Source/plugins/: BinaryOpUGens.cpp  IOUGens.cpp  LFUGens.cpp  MulAddUGens.cpp  PanUGens.cpp  TriggerUGens.cpp  UnaryOpUGens.cpp
cmake_modules/: FindLLVM.cmake  FindPthreads.cmake
common/Psycollider/Psycollider/: setup.py
editors/scapp/: SCCocoaView.M  SCView.M
editors/sced/: SConstruct
editors/scel/: README
include/lang/: SC_TerminalClient.h
include/plugin_interface/: SC_Graph.h  SC_InterfaceTable.h  SC_Unit.h  SC_Wire.h  muladd_helpers.hpp
lang/LangPrimSource/: PyrFilePrim.cpp  SC_HID.cpp
lang/LangSource/: SC_TerminalClient.cpp
platform/windows/: CMakeLists.txt  supercollider.nsi
server/plugins/: CMakeLists.txt  FilterUGens.cpp  LFUGens.cpp  OscUGens.cpp
server/scsynth/: SC_Lib_Cintf.cpp
server/supernova/: CMakeLists.txt  sc.hpp
testsuite/supernova/: CMakeLists.txt  test_synth.hpp
windows/: SC3Win.sln  sc3-win-installer-template.wxs  scsynth.vcproj
windows/PlugIns/: BinaryOpUGens.vcproj  ChaosUGens.vcproj  DelayUGens.vcproj  DemandUGens.vcproj  DiskIOUGens.vcproj  DynNoiseUGens.vcproj  FFT2_UGens.vcproj  FFT_UGens.vcproj  FilterUGens.vcproj  GendynUGens.vcproj  GrainUGens.vcproj  IOUGens.vcproj  LFUGens.vcproj  MachineListeningUGens.vcproj  MouseUGens.vcproj  MulAddUGens.vcproj  NoiseUGens.vcproj  OSCUGens.vcproj  PanUGens.vcproj  PhysicalModelingUGens.vcproj  ReverbUGens.vcproj  TestUGens.vcproj  TriggerUGens.vcproj  UnaryOpUGens.vcproj  UnpackFFTUGens.vcproj
(+39 files in other folders)
